--- a/WEBL/ClientApp/src/app/employee-list/employee-list.component.html
+++ b/WEBL/ClientApp/src/app/employee-list/employee-list.component.html
@@ -1,9 +1,9 @@
 <div class="row pull-right">
   <div class="col-xs-15">
-    <button class="btn btn-success"
-            (click)="addNewEmployee()">
-      Add New Employee
-    </button>
+    <dx-button class="button-info"
+               (click)="addNewEmployee()"
+               text="Add New Employee">
+    </dx-button>
     <br />
     <br />
     <app-employee *ngFor="let emp of employeeList"
@@ -11,3 +11,64 @@
     </app-employee>
   </div>
 </div>
+
+<dx-popup [width]="300"
+          [height]="500"
+          [showTitle]="true"
+          title="Add New Employee"
+          [dragEnabled]="false"
+          [closeOnOutsideClick]="true"
+          [(visible)]="popupVisible">
+
+  <form [formGroup]="addEmployeeForm"
+        (ngSubmit)="submitEmployee()">
+
+    <label for="name">Name</label>
+    <input type="text"
+           id="name"
+           class="form-control"
+           formControlName="name">
+
+    <label for="surname">Surname</label>
+    <input type="text"
+           id="surname"
+           class="form-control"
+           formControlName="surname">
+
+    <label for="email">Email Address</label>
+    <input type="email"
+           id="email"
+           class="form-control"
+           formControlName="email">
+
+    <label for="homeAddress">Home Address</label>
+    <input type="text"
+           id="homeAddress"
+           class="form-control"
+           formControlName="homeAddress">
+
+    <label for="salary">Salary</label>
+    <input type="number"
+           id="salary"
+           class="form-control"
+           formControlName="salary">
+
+    <label for="company">Company </label>
+    <br />
+    <select formControlName="companyId">
+      <option value="null" disabled>Select an option</option>
+      <option *ngFor="let comp of companyList"
+              [value]="comp.companyId">
+        {{ comp.name }}
+      </option>
+    </select>
+
+    <br />
+    <br />
+
+
+    <button class="btn btn-primary" type="submit">Submit</button>
+
+  </form>
+  
+</dx-popup>
