Add, Update and Delete done. Validation is still needed and showing company name when the list of employees are populated

--- a/WEBL/ClientApp/src/app/employee/employee.component.html
+++ b/WEBL/ClientApp/src/app/employee/employee.component.html
@@ -9,11 +9,7 @@
                text="Update"
                style="margin: 4px">
     </dx-button>
-    <button type="button"
-            class="btn btn-danger"
-            style="margin: 4px">
-      Delete
-    </button>
+    <button type=button class="btn btn-danger" (click)="deleteConfirmation(employee.name, employee.surname)">Delete me</button>
   </div>
 </a>
 
