--- a/WEBL/ClientApp/src/app/employee-list/employee-list.component.html
+++ b/WEBL/ClientApp/src/app/employee-list/employee-list.component.html
@@ -12,63 +12,79 @@
   </div>
 </div>
 
-<dx-popup [width]="300"
-          [height]="500"
+<dx-popup [width]="800"
+          [height]="350"
           [showTitle]="true"
           title="Add New Employee"
           [dragEnabled]="false"
           [closeOnOutsideClick]="true"
           [(visible)]="popupVisible">
 
-  <form [formGroup]="addEmployeeForm"
-        (ngSubmit)="submitEmployee()">
+  <form action="your-action" (submit)="submitEmployee()">
 
-    <label for="name">Name</label>
-    <input type="text"
-           id="name"
-           class="form-control"
-           formControlName="name">
+    <div id="form">
 
-    <label for="surname">Surname</label>
-    <input type="text"
-           id="surname"
-           class="form-control"
-           formControlName="surname">
+      <dx-form id="addEmployeeForm"
+               [formData]="employee"
+               [labelLocation]="labelLocation"
+               [minColWidth]="minColWidth"
+               [colCount]="colCount"
+               [width]="width">
 
-    <label for="email">Email Address</label>
-    <input type="email"
-           id="email"
-           class="form-control"
-           formControlName="email">
+        <dxi-item dataField="companyId" editorType="dxSelectBox" [editorOptions]="{ items: companyNameList, searchEnabled: true, value: '' }">
+          <dxi-validation-rule type="required"
+                               message="Company is required">
+          </dxi-validation-rule>
+          <dxi-validation-rule type="stringLength"
+                               [min]="2"
+                               message="Select a company">
+          </dxi-validation-rule>
+          <dxo-label text="Company Name">
+          </dxo-label>
+        </dxi-item>
 
-    <label for="homeAddress">Home Address</label>
-    <input type="text"
-           id="homeAddress"
-           class="form-control"
-           formControlName="homeAddress">
+        <dxi-item dataField="name" [editorOptions]="{ disabled: false, value: '' }">
+          <dxi-validation-rule type="required"
+                               message="Name is required">
+          </dxi-validation-rule>
+        </dxi-item>
 
-    <label for="salary">Salary</label>
-    <input type="number"
-           id="salary"
-           class="form-control"
-           formControlName="salary">
+        <dxi-item dataField="surname" [editorOptions]="{ disabled: false, value: '' }">
+          <dxi-validation-rule type="required"
+                               message="Surname is required">
+          </dxi-validation-rule>
+        </dxi-item>
 
-    <label for="company">Company </label>
-    <br />
-    <select formControlName="companyId">
-      <option value="null" disabled>Select an option</option>
-      <option *ngFor="let comp of companyList"
-              [value]="comp.companyId">
-        {{ comp.name }}
-      </option>
-    </select>
+        <dxi-item dataField="email" [editorOptions]="{ disabled: false, value: '' }">
+          <dxi-validation-rule type="required"
+                               message="Email is required">
+          </dxi-validation-rule>
+          <dxi-validation-rule type="email"
+                               message="Email is invalid">
+          </dxi-validation-rule>
+        </dxi-item>
 
-    <br />
-    <br />
+        <dxi-item dataField="address" [editorOptions]="{ disabled: false, value: '' }">
+          <dxi-validation-rule type="required"
+                               message="Address is required">
+          </dxi-validation-rule>
+        </dxi-item>
 
+        <dxi-item dataField="salary" [editorOptions]="{ disabled: false, value: 0 }">
+          <dxi-validation-rule type="required"
+                               message="Salary is required">
+          </dxi-validation-rule>
+        </dxi-item>
 
-    <button class="btn btn-primary" type="submit">Submit</button>
+        <dxi-item itemType="button"
+                  horizontalAlignment="center"
+                  [buttonOptions]="buttonOptions">
+        </dxi-item>
+
+      </dx-form>
+
+    </div>
 
   </form>
-  
+
 </dx-popup>
