--- a/WEBL/ClientApp/src/app/home/home.component.html
+++ b/WEBL/ClientApp/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-lg-15">
     <app-company-list></app-company-list>
   </div>
-  <div class="col-md-4">
+  <div class="col-lg-15">
     <app-employee-list></app-employee-list>
   </div>
 </div>
