Improved GUI and overall look of the project. Created comments for methods and removed unwanted code.

--- a/WEBL/ClientApp/src/app/company/company.component.html
+++ b/WEBL/ClientApp/src/app/company/company.component.html
@@ -1,8 +1,9 @@
 <a style="cursor: pointer"
    class="list-group-item clearfix"
-   (click)="displayEmployees()">
+   id="tile">
+   <!--(click)="displayEmployees()"-->
   <div class="pull-left">
-    <h1 class="list-group-item-heading">{{ company.companyId }}  {{ company.name }}</h1>
+    <h1 class="list-group-item-heading">{{ company.name }}</h1>
     <p class="list-group-item-heading">Average Salary: {{ salary | currency }}</p>
   </div>
 </a>
