--- a/WEBL/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WEBL/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a routerLink="/" class="navbar-brand">Employment Storage Service</a>
+      <a class="navbar-brand">Employment Storage Service</a>
     </div>
   </div>
 </nav>
