--- a/WEBL/ClientApp/src/app/company-list/company-list.component.html
+++ b/WEBL/ClientApp/src/app/company-list/company-list.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-15">
     <app-company *ngFor="let comp of companyList"
-                     [company]="comp">
+                 [company]="comp"
+                 style="float: left">
     </app-company>
   </div>
 </div>
-
