--- a/WEBL/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/WEBL/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -4,13 +4,9 @@ a.navbar-brand {
   word-break: break-all;
 }
 
-html {
+html
+{
   font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
 }
 
 .box-shadow {
