All docs up to date. Added functionality to allow the user to see employees based on their company. Added database backup and document explaining test cases for all of my API calls.

--- a/WEBL/ClientApp/src/app/company/company.component.html
+++ b/WEBL/ClientApp/src/app/company/company.component.html
@@ -1,7 +1,7 @@
 <a style="cursor: pointer"
    class="list-group-item clearfix"
-   id="tile">
-   <!--(click)="displayEmployees()"-->
+   id="tile"
+   (click)="displayEmployees()">
   <div class="pull-left">
     <h1 class="list-group-item-heading">{{ company.name }}</h1>
     <p class="list-group-item-heading">Average Salary: {{ salary | currency }}</p>
